# thought-graph

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  release_mcp.sh
mcp-server/: Cargo.toml
mcp-server/src/: main.rs  tools.rs
src/: index.html  main.js  styles.css
src-tauri/: tauri.conf.json
src-tauri/src/: commands.rs  graph.rs  lib.rs
