[workspace]
resolver = "2"
members = ["src-tauri", "mcp-server"]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["chanshunli"]

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.32", features = ["bundled"] }
anyhow = "1"
thiserror = "1"
chrono = { version = "0.4", features = ["serde"] }
